2011-03-31  Andy Estes  <aestes@apple.com>

Reviewed by Alexey Proskuryakov.

        REGRESSION: Java applet fails to load when <object> has a classid attribute.
        https://bugs.webkit.org/show_bug.cgi?id=52703

        Java applets embedded with the object element sometimes use classid to
        specify their main resource. When this is done, the classid is prefixed
        with "java:". Treat these as supported classids in WebKit.

        Test: java/embedding-java-with-object.html

        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::hasValidClassId): If the MIME type is a
        Java Applet type and the classid starts with "java:", the classid
        should be considered valid.
2011-03-31  Andy Estes  <aestes@apple.com>

        Reviewed by Alexey Proskuryakov.

        REGRESSION: Java applet fails to load when <object> has a classid attribute
        https://bugs.webkit.org/show_bug.cgi?id=52703

        Test various ways that a Java applet can be embedded using the object element.

        * java/embedding-java-with-object-expected.txt: Added.
        * java/embedding-java-with-object.html: Added.
        * platform/mac-wk2/Skipped: WK2 doesn't implement
        layoutTestController.overridePreference.


Canonical link: https://commits.webkit.org/72438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82646 268f45cc-cd09-0410-ab3c-d52691b4dbfc